--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,6 @@
     }
 
     input {
-        @apply p-2 border border-transparent focus:outline-none focus:ring-2 focus:ring-red-600 focus:border-red-600 shadow-md rounded-md
+        @apply p-2 border border-transparent focus:outline-none focus:ring-2 focus:ring-red-400 shadow-md rounded-md
     }
 }
